# ModularHackaton

./: .gitignore  README.md  gitfreedom.json
gitfreedom/: .gitignore  .nvim-dap.lua  Cargo.toml  README.md
gitfreedom-ui/: next.config.mjs  package-lock.json  package.json
gitfreedom-ui/.github/workflows/: build_and_deploy.yaml
gitfreedom-ui/app/: layout.tsx  page.tsx
gitfreedom-ui/app/repositories/: page.tsx  viem_tutorial.js
gitfreedom-ui/app/repositories/details/: page.tsx
gitfreedom-ui/app/repository/: page.tsx
gitfreedom-ui/components/: app-sidebar.tsx  arbitrum-banner.tsx  file-browser.tsx  file-icons.tsx  main-nav.tsx  repository-info.tsx  repository-view.tsx
gitfreedom-ui/contracts/: GitFreedom.sol
gitfreedom-ui/src-tauri/: tauri.conf.json
gitfreedom/src/: cli.rs  clone.rs  config.rs  errors.rs  git.rs  init.rs  lib.rs  main.rs  share.rs
gitfreedom/src/clone/: clone_seed.rs
gitfreedom/src/config/: configuer.rs  key_handler.rs  repo.rs
gitfreedom/src/init/: file_node.rs  hasher.rs  scaner.rs
gitfreedom/src/share/: compression.rs  contract.rs  share_seed.rs
