[package]
name = "gitfreedom"
version = "0.1.0"
edition = "2021"
description = "A way to store git repos descentralized! Still in concept prove stage."
license = "MIT OR Apache-2.0"

[dependencies]
git2 = "0.18"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
iroh-blobs = { version = "0.32.0", features = ["rpc"] }
tokio = "1.43.0"
iroh = "0.32.1"
thiserror = "2.0.11"
chrono = { version = "0.4.39", features = ["serde"] }
ethers = "2.0.14"
hex = "0.4.3"
if-addrs = "0.13.3"
walkdir = "2.5.0"
swarm-discovery = "0.2.1"
data-encoding = "2.8.0"
flate2 = "1.1.0"
tar = "0.4.44"
tempfile = "3.17.1"

[[bin]]
name = "gf"
path = "src/main.rs"
